--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qlik-js-sudoku",
   "version": "1.0.0",
   "description": "An implementation of a sudoku solver and generator",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
